--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-plugin-styled-components": "^1.3.0",
     "next": "^4.1.4",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
