--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,21 +1,26 @@
 {
-  "name": "frontend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "babel-plugin-styled-components": "^1.3.0",
-    "next": "^4.1.4",
-    "react": "^16.1.1",
-    "react-dom": "^16.1.1",
-    "styled-components": "^2.2.3"
-  },
-  "devDependencies": {
-    "flow-bin": "^0.59.0"
-  }
+    "name": "frontend",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "dev": "next",
+        "build": "next build",
+        "flow": "flow",
+        "start": "next start"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "babel-plugin-styled-components": "^1.3.0",
+        "next": "^4.1.4",
+        "react": "^16.1.1",
+        "react-dom": "^16.1.1",
+        "styled-components": "^2.2.3"
+    },
+    "devDependencies": {
+        "babel-eslint": "^8.0.2",
+        "babel-plugin-transform-flow-strip-types": "^6.22.0",
+        "flow-bin": "^0.59.0"
+    }
 }
