--- a/frontend/.babelrc
+++ b/frontend/.babelrc
@@ -1,7 +1,18 @@
 {
-  "presets": [
-    "next/babel"
-  ],
+    "env": {
+        "development": {
+          "presets": "next/babel"
+        },
+        "production": {
+          "presets": "next/babel"
+        },
+        "test": {
+          "presets": [
+            ["env", { "modules": "commonjs" }],
+            "next/babel"
+          ]
+        }
+  },
   "plugins": [
     ["styled-components", { "ssr": true, "displayName": true, "preprocess": false } ],
     "transform-flow-strip-types"
