--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
         "enzyme-adapter-react-16": "^1.1.0",
         "flow-bin": "^0.59.0",
         "jest": "^21.2.1",
+        "jest-styled-components": "^4.9.0",
         "react-addons-test-utils": "^15.6.2",
         "react-test-renderer": "^16.1.1"
     }
